# TempDetect

./: .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  main.rs  package-lock.json  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/SystemMonitor/: CpuCard.vue  GpuCard.vue  ProgressBar.vue  StressButton.vue  StressTestCard.vue  SystemMonitor.vue
src/styles/: global.css
src/utils/: theme.ts
src/workers/: statsWorker.ts
