[package]
name = "tempdetect"
version = "0.1.1"
description = "A temperature detection application for CPU and GPU"
authors = ["c-zeong"]
repository = "https://github.com/c-zeong/tempdetect"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tempdetect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 添加新的依赖
sysinfo = "0.29.10"
io-kit-sys = "0.4.0"
mach = "0.3.2"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18"
parking_lot = "0.12"
num_cpus = "1.13"
metal = "0.24.0"
core-foundation-sys = "0.8.6"
futures = "0.3"
